--- a/farmgym_games/game_catalogue/farm2/farm2_init.yaml
+++ b/farmgym_games/game_catalogue/farm2/farm2_init.yaml
@@ -1,18 +1,19 @@
 Initial:
   Field-0:
     Weather-0:
-      day#int365: 0
+      day#int365: 100
     Soil-0:
-      available_N#g: 5000.0
-      available_P#g: 5000.0
-      available_K#g: 5000.0
-      available_C#g: 5000.0
-      available_Water#L: 5.0
+      available_N#g: 1000.0
+      available_P#g: 1000.0
+      available_K#g: 1000.0
+      available_C#g: 1000.0
+      available_Water#L: 50.0
       wet_surface#m2.day-1: 0.0
-      microlife_health_index#%: 50.0
+      microlife_health_index#%: 100.0
     Plant-0:
-      stage: seed
+      stage: none
       population#nb: 1.0
+
 Terminal:
   [
     [{state_variable: ["Field-0", "Weather-0", "day#int365", []], function: "value", operator: ">=", ref_value: 360}],
