Updated number of interventions in games

--- a/farmgym_games/game_catalogue/farm1/farm1.yaml
+++ b/farmgym_games/game_catalogue/farm1/farm1.yaml
@@ -22,7 +22,7 @@ Farm:
   Farmer-0:
     type: basic
     parameters:
-      max_daily_interventions: 1
+      max_daily_interventions: 3 # TODO : Maybe change it back to 1
       max_daily_observations: 2
 actions: actions.yaml
 score: score.yaml
