--- a/farmgym_games/game_catalogue/farm0/farm0_init.yaml
+++ b/farmgym_games/game_catalogue/farm0/farm0_init.yaml
@@ -1,17 +1,13 @@
 Initial:
   Field-0:
     Weather-0:
+      year#int100: 0
       day#int365: 120
     Soil-0:
-      available_N#g: 5000.0
-      available_P#g: 5000.0
-      available_K#g: 5000.0
-      available_C#g: 5000.0
-      available_Water#L: 70.0
-      microlife_health_index#%: 75.0
+      microlife_health_index#%: 75
     Plant-0:
-      stage: seed
-      population#nb: 1.0
+      stage: "seed"
+      population#nb: 1
 Terminal:
   [
     [{state_variable: ["Field-0", "Weather-0", "day#int365", []], function: "value", operator: ">=", ref_value: 360}],
