--- a/farmgym_games/game_catalogue/farm1/farm1_score.yaml
+++ b/farmgym_games/game_catalogue/farm1/farm1_score.yaml
@@ -1,23 +1,23 @@
 observation-cost:
   Field-0:
     Weather-0:
+      year#int100: 1
       day#int365: 1
       air_temperature: 1
-      humidity_index#%: 1
+      humidity#%: 1
       wind: 1
-      sun_exposure#int5: 1
-      rain_amount: 1
-      rain_intensity: 1
+      clouds#%: 1
+      rain_amount#mm.day-1: 1
       consecutive_frost#day: 1
       consecutive_dry#day: 1
-      air_temperature.forecast: 1
+      forecast: 1
     Soil-0:
       available_N#g: 1
       available_P#g: 1
       available_K#g: 1
       available_C#g: 1
       available_Water#L: 1
-      wet_surface#m2.day-1: 1
+      depth#m: 1
       microlife_health_index#%: 1
       amount_cide#g: 1
       total_cumulated_added_water#L: 1
@@ -46,13 +46,9 @@ observation-cost:
       cumulated_stress_nutrients_P#g: 1
       cumulated_stress_nutrients_K#g: 1
       cumulated_stress_nutrients_C#g: 1
-      cumulated_water#L: 1
       cumulated_stress_water#L: 1
       grow_size_threshold#cm: 1
       fruit_weight_threshold#g: 1
-    Fertilizer-0:
-      amount#kg: 1
-      total_cumulated_scattered_amount#kg: 1
     Pollinators-0:
       occurrence#bin: 1
       total_cumulated_occurrence#nb: 1
@@ -61,17 +57,11 @@ observation-cost:
       seeds#nb: 1
       flowers#nb: 1
       total_cumulated_plot_population#nb: 1
-    Cide-0:
-      amount#kg: 1
-      total_cumulated_scattered_amount#kg: 1
     Pests-0:
       plot_population#nb: 1
       onplant_population#nb: 1
       total_cumulated_plot_population#nb: 1
-    Pollinators-1:
-      occurrence#bin: 1
-      total_cumulated_occurrence#nb: 1
-    Cide-1:
+    Fertilizer-0:
       amount#kg: 1
       total_cumulated_scattered_amount#kg: 1
 intervention-cost:
@@ -84,15 +74,9 @@ intervention-cost:
       harvest: 1
       micro_harvest: 1
       remove: 1
-    Fertilizer-0:
-      scatter: 1
-      scatter_bag: 1
     Weeds-0:
       remove: 1
-    Cide-0:
-      scatter: 1
-      scatter_bag: 1
-    Cide-1:
+    Fertilizer-0:
       scatter: 1
       scatter_bag: 1
 reward-mix:
