--- a/farmgym_games/game_catalogue/farm2/farm2.yaml
+++ b/farmgym_games/game_catalogue/farm2/farm2.yaml
@@ -1,26 +1,33 @@
 Farm:
   Field-0:
     localization:
-      latitude#°: 50.38
-      longitude#°: 3.03
+      latitude#°: 50.62
+      longitude#°: 3.05
       altitude#m: 10
     shape:
       length#nb: 1
       width#nb: 1
       scale#m: 1.0
     entities:
-      - Weather: lille
-      - Soil: loam
+      - Weather: montpellier
+      - Soil:  clay
       - Plant: bean
+      - Pollinators: bee
   Farmer-0:
     type: basic
     parameters:
       max_daily_interventions: 3
       max_daily_observations: 2
+day_path: {"field":"Field-0", "entity":"Weather-0", "variable": "day#int365"}
 actions: actions.yaml
 score: score.yaml
 initialization: init.yaml
 interaction_mode: POMDP
+
+
+
+
+
 
 
 
