--- a/farmgym_games/game_catalogue/farm2/farm2_init.yaml
+++ b/farmgym_games/game_catalogue/farm2/farm2_init.yaml
@@ -1,18 +1,13 @@
 Initial:
   Field-0:
     Weather-0:
-      day#int365: 100
+      year#int100: 0
+      day#int365: 120
     Soil-0:
-      available_N#g: 1000.0
-      available_P#g: 1000.0
-      available_K#g: 1000.0
-      available_C#g: 1000.0
-      available_Water#L: 200.0
-      microlife_health_index#%: 100.0
+      microlife_health_index#%: 75
     Plant-0:
-      stage: seed
-      population#nb: 1.0
-
+      stage: "seed"
+      population#nb: 1
 Terminal:
   [
     [{state_variable: ["Field-0", "Weather-0", "day#int365", []], function: "value", operator: ">=", ref_value: 360}],
