--- a/farmgym_games/game_catalogue/farm0/farm0_actions.yaml
+++ b/farmgym_games/game_catalogue/farm0/farm0_actions.yaml
@@ -39,6 +39,6 @@ interventions:
       Soil-0:
         water_discrete: 
           plot: ['(0, 0)']
-          amount#L: [1.0, 2.0, 3.0, 4.0, 5.0]
+          amount#L: [0.0, 1.0, 2.0, 3.0, 4.0, 5.0]
       Plant-0:
         harvest:
